--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="favicon-32x32.png"
+      href="asset/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
     <title>
@@ -18,9 +18,9 @@
     <main class="main">
       <article class="active-state">
         <section class="hero-image">
-          <img src="illustration-sign-up-desktop.svg" alt="desktop" class="desktop-img">
-          <img src="illustration-sign-up-tablet.svg" alt="tablet" class="tablet-img">
-          <img src="illustration-sign-up-mobile.svg" alt="mobile" class="mobile-img">
+          <img src="asset/illustration-sign-up-desktop.svg" alt="desktop" class="desktop-img">
+          <img src="asset/illustration-sign-up-tablet.svg" alt="tablet" class="tablet-img">
+          <img src="asset/illustration-sign-up-mobile.svg" alt="mobile" class="mobile-img">
         </section>
         <section class="info">
           <h1>Stay Updated!</h1>
@@ -56,7 +56,7 @@
       <article class="successState">
         <section class="successful-pop-up">
           <div class="tick">
-            <img src="icon-success.svg" alt="check icon" />
+            <img src="asset/icon-success.svg" alt="check icon" />
           </div>
           <h2 class="thank-you">Thanks for subscribing!</h2>
           <p class="message">
