--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       </article>
       <article class="successState">
         <section class="successful-pop-up">
-          <div class="tick">
+            <div>
+                        <div class="tick">
             <img src="asset/icon-success.svg" alt="check icon" />
           </div>
           <h2 class="thank-you">Thanks for subscribing!</h2>
@@ -64,6 +65,7 @@
             <span class="user-email"></span>. Please open it and click the
             button inside to confirm your subscription.
           </p>
+            </div>
           <button class="dismiss">Dismiss message</button>
         </section>
       </article>
